tests/lean/elab1.lean.expected.out
  Set: pp::colors
  Set: pp::unicode
  Assumed: f
Failed to solve
 ⊢ Bool ≺ ℕ
    elab1.lean:2:6: Type of argument 3 must be convertible to the expected type in the application of
        @f
    with arguments:
        ℕ
        10
        ⊤
  Assumed: g
elab1.lean:5:8: error: invalid expression, it still contains metavariables after elaboration, metavariable: ?M::1, type:
Type
  Assumed: h
Failed to solve
x : ?M::0, A : Type ⊢ ?M::0 ≺ A
    elab1.lean:9:27: Type of argument 2 must be convertible to the expected type in the application of
        h
    with arguments:
        A
        x
  Assumed: my_eq
Failed to solve
A : Type, B : Type, a : ?M::0, b : ?M::1, C : Type ⊢ ?M::0[lift:0:3] ≺ C
    elab1.lean:13:51: Type of argument 2 must be convertible to the expected type in the application of
        my_eq
    with arguments:
        C
        a
        b
  Assumed: a
  Assumed: b
  Assumed: H
Failed to solve
 ⊢ ∀ H1 : ?M::0, ?M::1 ∧ a ≺ b
    elab1.lean:18:18: Type of definition 't1' must be convertible to expected type.
Failed to solve
 ⊢ b == b ≺ a == b
    elab1.lean:20:22: Type of argument 6 must be convertible to the expected type in the application of
        @trans
    with arguments:
        ?M::1
        a
        a
        b
        @refl ?M::5 a
        @refl ?M::6 b
Failed to solve
 ⊢ ?M::1 ≺ Type
    elab1.lean:22:6: Type of argument 1 must be convertible to the expected type in the application of
        @f
    with arguments:
        ?M::0
        Bool
        Bool
elab1.lean:25:18: error: unknown identifier 'EM'
